[gd_scene load_steps=19 format=2]

[ext_resource path="res://recursos/Jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://recursos/Casa.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Mundo.gd" type="Script" id=3]
[ext_resource path="res://recursos/CameraTelaInicial.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/TelaInicial.tscn" type="PackedScene" id=5]
[ext_resource path="res://materiais/chao_gramado.tres" type="Material" id=6]
[ext_resource path="res://recursos/Sol.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mouse.tscn" type="PackedScene" id=8]
[ext_resource path="res://recursos/Objetos/arvore_macieira.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/VoxelLodTerrain.gd" type="Script" id=10]
[ext_resource path="res://recursos/agua.tscn" type="PackedScene" id=11]
[ext_resource path="res://recursos/Objetos/arbusto.tscn" type="PackedScene" id=12]
[ext_resource path="res://recursos/Objetos/Muro.tscn" type="PackedScene" id=13]
[ext_resource path="res://recursos/Objetos/arvoreDEV.tscn" type="PackedScene" id=14]
[ext_resource path="res://recursos/Objetos/grama.tscn" type="PackedScene" id=15]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="VoxelGeneratorNoise" id=2]
bias_mode = 1
height_range = 35.0
noise = SubResource( 1 )

[sub_resource type="VoxelStreamRegionFiles" id=3]
fallback_stream = SubResource( 2 )
lod_count = 4
sector_size = 256

[node name="Mundo" type="Spatial"]
script = ExtResource( 3 )

[node name="CameraTelaInicial" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.615661, 0, 0.788011, 0, 1, 0, -0.788011, 0, 0.615661, 46, 53, 43 )

[node name="TelaInicial" parent="." instance=ExtResource( 5 )]

[node name="Jogador" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -42, 40, -50 )

[node name="Mouse" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Sol" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -1, -3.25841e-07, 0, 3.25841e-07, -1, 0, 0, 0 )

[node name="VoxelLodTerrain" type="VoxelLodTerrain" parent="."]
stream = SubResource( 3 )
view_distance = 256
lod_count = 8
lod_split_scale = 5.0
viewer_path = NodePath("../Jogador")
material = ExtResource( 6 )
script = ExtResource( 10 )

[node name="Agua" parent="." instance=ExtResource( 11 )]
transform = Transform( 5, 0, -3.17867e-07, 0, 3, 0, 3.17867e-07, 0, 5, 0, 0, 0 )

[node name="Coisas" type="Spatial" parent="."]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )

[node name="arvoreDEV" parent="Coisas" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28.4028, 4.03088, 1.05889 )

[node name="Muro" parent="Coisas" instance=ExtResource( 13 )]
transform = Transform( 0.166667, 0, 0, 0, 0.166667, 0, 0, 0, 0.166667, -11.8594, 4.9946, 2.54208 )

[node name="arbusto" parent="Coisas" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.2284, 0.241069, -9.71296 )

[node name="grama" parent="Coisas" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.67288, 4.5706, -5.25341 )

[node name="arvore_macieira" parent="Coisas" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.03, 5.18926, 6.52141 )

[node name="Casa" parent="Coisas" instance=ExtResource( 2 )]
transform = Transform( 0.166667, 0, 0, 0, 0.166667, 0, 0, 0, 0.166667, -6.99854, 5.43977, -8.46285 )
[connection signal="entrar" from="TelaInicial" to="." method="_on_TelaInicial_entrar"]
